[gd_scene load_steps=30 format=3 uid="uid://ckyexbu8v7e3j"]

[ext_resource type="Script" path="res://Scripts/Characters/player.gd" id="1_2s006"]
[ext_resource type="Texture2D" uid="uid://bn4u0isc2ku54" path="res://Assets/TerraOffSprites/TerraOffSprites/TerraDownSet.png" id="2_nea3w"]
[ext_resource type="Texture2D" uid="uid://ca53dk16d2abu" path="res://Assets/TerraOffSprites/TerraOffSprites/TerraRightSet.png" id="3_j72rq"]
[ext_resource type="PackedScene" uid="uid://cn3srniqu7uh7" path="res://Scenes/UI/Inventory_Stuff/inventory_ui.tscn" id="3_oh5w0"]
[ext_resource type="Texture2D" uid="uid://cnbnuhhl2arpc" path="res://Assets/TerraOffSprites/TerraOffSprites/TerraLeftSet.png" id="4_36dd3"]
[ext_resource type="Texture2D" uid="uid://dmrydpb0kobi4" path="res://Assets/TerraOffSprites/TerraOffSprites/TerraUpSet.png" id="5_a5260"]
[ext_resource type="PackedScene" uid="uid://dr4oxfh8ki4us" path="res://Scenes/UI/Inventory_Stuff/hotbar.tscn" id="6_3i3iy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4664"]
atlas = ExtResource("2_nea3w")
region = Rect2(0, 0, 185, 337)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgfqq"]
atlas = ExtResource("3_j72rq")
region = Rect2(0, 0, 183, 340)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk6up"]
atlas = ExtResource("4_36dd3")
region = Rect2(0, 0, 180, 347)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ed3n"]
atlas = ExtResource("5_a5260")
region = Rect2(0, 0, 182, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt2rv"]
atlas = ExtResource("2_nea3w")
region = Rect2(0, 0, 185, 337)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg11a"]
atlas = ExtResource("2_nea3w")
region = Rect2(185, 0, 185, 337)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc01o"]
atlas = ExtResource("2_nea3w")
region = Rect2(370, 0, 185, 337)

[sub_resource type="AtlasTexture" id="AtlasTexture_e47ky"]
atlas = ExtResource("2_nea3w")
region = Rect2(555, 0, 185, 337)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej46l"]
atlas = ExtResource("3_j72rq")
region = Rect2(0, 0, 183, 340)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx3mp"]
atlas = ExtResource("3_j72rq")
region = Rect2(183, 0, 183, 340)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmql2"]
atlas = ExtResource("3_j72rq")
region = Rect2(366, 0, 183, 340)

[sub_resource type="AtlasTexture" id="AtlasTexture_xurmx"]
atlas = ExtResource("3_j72rq")
region = Rect2(549, 0, 183, 340)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx3sf"]
atlas = ExtResource("4_36dd3")
region = Rect2(0, 0, 180, 347)

[sub_resource type="AtlasTexture" id="AtlasTexture_kacol"]
atlas = ExtResource("4_36dd3")
region = Rect2(180, 0, 180, 347)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u7gh"]
atlas = ExtResource("4_36dd3")
region = Rect2(360, 0, 180, 347)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb3iv"]
atlas = ExtResource("4_36dd3")
region = Rect2(540, 0, 180, 347)

[sub_resource type="AtlasTexture" id="AtlasTexture_snmuj"]
atlas = ExtResource("5_a5260")
region = Rect2(0, 0, 182, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l3pp"]
atlas = ExtResource("5_a5260")
region = Rect2(182, 0, 182, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_drqnp"]
atlas = ExtResource("5_a5260")
region = Rect2(364, 0, 182, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdqf0"]
atlas = ExtResource("5_a5260")
region = Rect2(546, 0, 182, 341)

[sub_resource type="SpriteFrames" id="SpriteFrames_jjixu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4664")
}],
"loop": true,
"name": &"Idle_Down",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgfqq")
}],
"loop": true,
"name": &"Idle_Left",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk6up")
}],
"loop": true,
"name": &"Idle_Right",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ed3n")
}],
"loop": true,
"name": &"Idle_Up",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt2rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg11a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc01o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e47ky")
}],
"loop": true,
"name": &"Walk_Down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej46l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx3mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmql2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xurmx")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx3sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kacol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u7gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb3iv")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snmuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l3pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drqnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdqf0")
}],
"loop": true,
"name": &"Walk_Up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fybfh"]
size = Vector2(24, 50)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
process_mode = 3
script = ExtResource("1_2s006")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_jjixu")
animation = &"Walk_Up"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 7)
shape = SubResource("RectangleShape2D_fybfh")

[node name="Interact_Pick_Up_UI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Interact_Pick_Up_UI"]
self_modulate = Color(0.192157, 0.376471, 0.321569, 1)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Interact_Pick_Up_UI/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Press \"Space\" to pick up"

[node name="No_More_trees" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="No_More_trees"]
self_modulate = Color(0.192157, 0.376471, 0.321569, 1)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.514
anchor_right = 0.5
anchor_bottom = 0.514
offset_left = -195.0
offset_top = -25.12
offset_right = 205.0
offset_bottom = 24.88
grow_horizontal = 0
grow_vertical = 0
color = Color(0.0901961, 1, 1, 1)

[node name="Label" type="Label" parent="No_More_trees/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "You can no longer plant seeds in this area"

[node name="Inventory_UI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Inventory_UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.192157, 0.376471, 0.321569, 0.533333)

[node name="Label" type="Label" parent="Inventory_UI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.5
offset_right = 139.5
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Inventory"

[node name="Inventory_UI" parent="Inventory_UI/ColorRect" instance=ExtResource("3_oh5w0")]
layout_mode = 1

[node name="Inventory_Hotbar" type="CanvasLayer" parent="."]

[node name="Inventory_Hotbar2" parent="Inventory_Hotbar" instance=ExtResource("6_3i3iy")]
